--- a/app/src/main/res/layout/item_unsplash_photo.xml
+++ b/app/src/main/res/layout/item_unsplash_photo.xml
@@ -8,10 +8,9 @@
     <ImageView
         android:id="@+id/image_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:contentDescription="@string/image_result" />
+        android:layout_height="match_parent" />
 
-    <view
+    <View
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_alignBottom="@id/image_view"
@@ -29,6 +28,45 @@
         android:maxLines="1"
         android:textColor="#fff"
         app:drawableStartCompat="@drawable/ic_user"
-        tools:text="UserName" />
+        tools:text="username" />
 
 </RelativeLayout>
+<!--<?xml version="1.0" encoding="utf-8"?>-->
+<!--<RelativeLayout-->
+<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--    xmlns:tools="http://schemas.android.com/tools"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="250dp">-->
+
+<!--    <ImageView-->
+<!--        android:id="@+id/image_view"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:contentDescription="@string/image_result" />-->
+
+
+<!--    <TextView-->
+<!--        android:id="@+id/text_view_user_name"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_alignBottom="@id/image_view"-->
+<!--        android:layout_margin="8dp"-->
+<!--        android:drawablePadding="4dp"-->
+<!--        android:ellipsize="end"-->
+<!--        android:gravity="center_vertical"-->
+<!--        android:maxLines="1"-->
+<!--        android:textColor="#fff"-->
+<!--        app:drawableStartCompat="@drawable/ic_user"-->
+<!--        tools:text="UserName" />-->
+
+<!--    <View-->
+<!--        android:id="@+id/view"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="40dp"-->
+<!--        android:visibility="visible"-->
+<!--        android:layout_alignBottom="@id/image_view"-->
+<!--        android:background="@drawable/gradient"/>-->
+
+
+<!--</RelativeLayout>-->
