--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -9,12 +9,13 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingBottom="4dp">
 
             <ImageView
                 android:id="@+id/image_View"
@@ -23,7 +24,7 @@
                 android:layout_marginBottom="4dp"
                 android:adjustViewBounds="true"
                 android:contentDescription="@string/full_image"
-                android:src="@mipmap/ic_launcher_round"
+                android:src="@mipmap/ic_loading"
                 tools:ScaleType="centerCrop"
                 tools:layout_height="300dp" />
 
